welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: Missing closing brace `}' assumed here
def haveBaggle():Boolean = {
^Program:3: error: expected class or object definition
def haveBaggle():Boolean = {
^